# winget-source-builder

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  action.yml  build.rs
.github/workflows/: ci.yml  release.yml
docs/en/: architecture.md  cli-reference.md  contributing.md  development.md  usage.md
docs/zh-CN/: architecture.md  cli-reference.md  contributing.md  development.md  usage.md
docs/zh-TW/: architecture.md  cli-reference.md  contributing.md  development.md  usage.md
locales/: en.yml  zh-CN.yml  zh-TW.yml
scripts/: build-makemsix.sh  build-wingetutil.ps1
src/: adapter.rs  backend.rs  builder.rs  i18n.rs  main.rs  manifest.rs  mszip.rs  progress.rs  state.rs  version.rs
tests/data/e2e-repo/manifests/E/Example/App/1.0.0/: Example.App.installer.yaml  Example.App.locale.en-US.yaml  Example.App.yaml
tests/data/e2e-repo/packaging/msix/: AppxManifest.xml
