[package]
name = "winget-source-builder"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Static WinGet source builder for third-party repositories"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crc32fast = "1.5"
env_logger = "0.11"
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
hex = "0.4"
indicatif = "0.17"
libloading = "0.8"
log = "0.4"
rayon = "1.10"
rust-i18n = "3.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.17"
unicode-normalization = "0.1"
uuid = { version = "1.18", features = ["v4"] }
walkdir = "2.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_Compression"] }

[dev-dependencies]
zip = "2.4"
